syntax = "proto3";

option csharp_namespace = "BelbimEShop.Basket.API.Protos";

package basket;

service BasketService {

  rpc AddItem (AddItemRequest) returns (BasketResponse);
  rpc GetBasket (GetBasketRequest) returns (BasketResponse);
  rpc Update(UpdateBasketRequest) returns (BasketResponse);

}

message AddItemRequest {
  string userId = 1; 
  BasketItem item = 2;
}
message BasketItem{
  int64 productId = 1;
  string productName = 2;
  double price = 3;
  int32 quantity = 4;
}
message BasketResponse{
 string userId = 1;
  repeated BasketItem items = 2;
  double totalPrice = 3;
}

message GetBasketRequest {
  string userId = 1; 
}

message UpdateBasketRequest {
  string userId = 1;
  repeated BasketItem items = 2;
}
